<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.codesimcoe</groupId>
    <artifactId>newtonparticlesfx</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>27</maven.compiler.source>
        <maven.compiler.target>27</maven.compiler.target>
        <javafx.version>25</javafx.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <enablePreview>true</enablePreview>
                    <compilerArgs>
                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=newtonparticlesfx</arg>
                        <arg>--add-exports=java.base/jdk.internal.value=newtonparticlesfx</arg>
                        <arg>--add-exports=java.base/jdk.internal.misc=newtonparticlesfx</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>newtonparticlesfx/com.codesimcoe.newtonparticlesfx.NewtonParticlesFxMain</mainClass>
                    <options>
                        <option>--enable-native-access=javafx.graphics</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>